--- a/PowerLook-Aluguel/PowerLook-Aluguel/Form_cad_cliente.resx
+++ b/PowerLook-Aluguel/PowerLook-Aluguel/Form_cad_cliente.resx
@@ -174,4 +174,7 @@
   <metadata name="tipoUsuarioBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>193, 18</value>
   </metadata>
+  <metadata name="pessoaFisicaBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 56</value>
+  </metadata>
 </root>
