Alterada interface da tela de Cad. de Fornecedores

--- a/PowerLook-Aluguel/PowerLook-Aluguel/Form_cad_Fornecedor.resx
+++ b/PowerLook-Aluguel/PowerLook-Aluguel/Form_cad_Fornecedor.resx
@@ -162,6 +162,9 @@
   <metadata name="enderecosBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>234, 18</value>
   </metadata>
+  <metadata name="enderecosBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>234, 18</value>
+  </metadata>
   <metadata name="pessoaJurificaBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>421, 18</value>
   </metadata>
