--- a/PowerLook-Aluguel/PowerLook-Aluguel/Form_principal.resx
+++ b/PowerLook-Aluguel/PowerLook-Aluguel/Form_principal.resx
@@ -333,6 +333,43 @@
         zn8A37fqRypuTSYAAAAASUVORK5CYII=
 </value>
   </data>
+  <data name="usuáriosToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAdjSURBVGhD7VlpTFRXFJ7uTZt0Sff+7Z606Q/bdEmamqizARU1tsZUU6xtNNWuttqkrbjAzHsz
+        igu1iltTlwLWhrqhtgmKMnMfDijLVERAQY0rolWBN8zM6/ked+gwXIGBBzGNX/IlL++d75z73r3n3HNn
+        TDdxEzcohqYW3G1xKi+b072vDc0oeIDf7hEJjn0PQgMtfPDbg4/hTt/9don9aJO8rRanVwOtThZKcin5
+        I2T2DDfrAqu0/7lEl7ITthGdTWYtVpll2lLZfdxscJDk9j2c4GZHxy8rVX8rOa/5zwa06sagtvvwJe3T
+        df6AXWZX8bW5eQdsEnudnl37bH1l259Vl3UNtPAxPrNUTXCx6mHpykPcfOCR4FK2pawsUw+fa9OOXQp3
+        Yl1TWJuTVxukFz2TlOq7h0tMZlfZvXZZOTcnryZUF6MB/yZfKVllaoLM/uCSgYU53fM8lsPemitdBhNh
+        1YWgNmrhAdXsYB9zmcni8E4ZnXFAPULPRBpwz9Er+lKzpyvPctnAAQMal1nSIhpINOfm1YTtLiWHy2gW
+        2SaajbDINprjMn0t0R9gwGCVPN9OXl3e44tk7KrXEt3FBVxmwnXGrgahbTQ/Wl3ebHayWVw2cKBq8z6W
+        DXJBNJAIv8mparNK3lVchkRfMyu3qk1kGyF8JpNvi9MznssGDmZX0aP0Mm2bSy8IBwOWnGzR7C4WNMue
+        xHYVZtL7DlWsYOnJVqEGRPWiUhywpRc+wmUDC5vTm5a8sDhQKEj4yjMB7cNV5VRKFY9J027hEhOuKU8Y
+        LUu1gmxidSgeIxcUB2jm5nLFwGNsbu5tdtm7AV84bWtt+PeDF7QtZRe1pX816NWKSm85Zo6bd2BYGnss
+        wa1UjqLqBVtooJ2/pTZMLxCi0rsOvrn54MHq8IyiXXoPfekrNtnbmrSguNwieT63LdlxFzfpArQjZof3
+        iyS3UgENtIluVmCWPMncxFhgM6PqMSPJXVyONgSk9qPM4mBfRW90RsPQuMMl7wu0BzSMWeTjS6BRJ67H
+        LKKl41LqsTFyc8NgaFysbbQXM3493FZ1vmsLgnt4Rk5Po+fisn7D8LiUwMsnrjikVnfTSuDZhOUHVZr2
+        n7is3zA0LpKUHDZv8p0XOopmLtmQ7bWxqf47ubzPMDyu3el5CU0b9gKRk2hWnFb1Bs+cVvQil/cZhsfF
+        eQFG3U1vhLDRHQrOHYDVUfSq1elxUXneBeJ6hKS8wh93gpFxdYyQ9j8Jo/11V4VOollYy1tuufhxLteB
+        c4eNOl2L5A1PWVuhunYc18CpaytbcY+SNQc23FyHEXG7gHZev7S9rsd227HtWCiRNjUu04F1SwMtGre0
+        VMXZIlazp/ofDc8SXWzfkBW+O7hMR3/iCmFxspFoF/L9TUJHYH5lkwYbs9ObxGU6aKf/Gi1Kd41hCTWU
+        1Kep2ODaVe3oT9zrwiIzN7rXrL2n9NNexBGus/acRNUIWl1M5ubt0JtC5dzKwlOdgosIG5qVs52aSkKf
+        4vYEOglOpoE1QfzBikPNIK5xz+zwTOJmHcAvJ1i7JfTFowct4oETLfo6tzg8T7er/0O8cXsFNHjWdGZH
+        kwfi+nq/QZmdnjcxuJrGkHDw0Tza2F55rOlFb3B5J8QT13BEZsRHX1s0+GhGZsQmFz3F5TcQaL1j3fcm
+        R5AD1Lqfic0Rw4EySlP6nlVScqhe11slTyvYfq3k0Nd8V9QioP1OXqgESrrJEzyDjdXp/VIXRaGvcYWg
+        sjiGkuuE3a0EJq2tDs7MO6Ol7mzUieuUtUeCeGaTlQY6h4/mMh3YG+igtF/fR2jPiH2JAn0fKcEvioW0
+        5m/nMh39idsJOGKSwQKbk4WmZ9eHl7KAttwXEnIJU7Vp2cfDVqrp1Im6U1O1W7kbfWdPlFk2dnHs5rE7
+        u11iG6MPSEbF7QCcJbiKA/N2XxI6EXHu7iYNGqvMXNxNB9BX0VKQ8IM1ftiml3CaHWwIf9wBQ+NiWvFF
+        4nEWIZziC/XlzG1oXCQP1iamVSToDT+h6bbREbXXiUgwPC6qBJKou7XZE7F2KQnbqNcai0Fa0nxP4Pdb
+        WlpZdlnZBeIa9yJdq+FxaXpyJ/9c3SYyjIeTqKpQAm6ldbsRST0yw9c6fUN1aNbm4xo4bf2RUDLdwzPY
+        UNxtxsVl2Sa7S6lHeRMZxcOp62s1GmB4YlaFmuW9pG2vCWs7Yoh7eDZhRbkK2ynr64S+4uHMvNM4m9Rj
+        RlpSd14UGvWW320/j7/dtNlbTwhfIJaw+WFLg675nrQin73l7PxGJH0LnQPa/8frD8mRNm/HKeGgu+O8
+        7Scxi0Kf8RJt8/D+0CYz/9RfqoKigfaGU0hLPipFvuMhCkifYZM9b2Mf2HioWTjI3nDjwWb91GeRlbe4
+        28EHHU8zJ6/xt4oGGA8nrfarZsm7mLsdfNCprTotP/7ciOV8yi9qZaq428EHLYkrS/deEA4uHi4mH5Qn
+        l7nbwQdVi/D4ZWWtKav9zf0hfMAXdzv4QEdrJLnbm/gfwGT6Fw+yHHGQ1iEAAAAAAElFTkSuQmCC
+</value>
+  </data>
   <data name="vendaToolStripMenuItem1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAABbRJREFUaEPt
@@ -361,6 +398,43 @@
         JlOMHh1eeK3DEzijgem7VTyIXICe6bgnOuqdMFbSBnDCAwal7uso1q1kXR5wcia66V1o8cZ4SRs9lMVy
         0RXHvfCPsjBKWUztaR9MkZRBYU3ZCS/8KXWKDnV42+HXkruh3Q0TTnlA9Y0LJop1R8AJY9q94P2lV///
         ajlw4MCBg/sUJ6f/APylELupcNxuAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btnUsuario.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAdjSURBVGhD7VlpTFRXFJ7uTZt0Sff+7Z606Q/bdEmamqizARU1tsZUU6xtNNWuttqkrbjAzHsz
+        igu1iltTlwLWhrqhtgmKMnMfDijLVERAQY0rolWBN8zM6/ked+gwXIGBBzGNX/IlL++d75z73r3n3HNn
+        TDdxEzcohqYW3G1xKi+b072vDc0oeIDf7hEJjn0PQgMtfPDbg4/hTt/9don9aJO8rRanVwOtThZKcin5
+        I2T2DDfrAqu0/7lEl7ITthGdTWYtVpll2lLZfdxscJDk9j2c4GZHxy8rVX8rOa/5zwa06sagtvvwJe3T
+        df6AXWZX8bW5eQdsEnudnl37bH1l259Vl3UNtPAxPrNUTXCx6mHpykPcfOCR4FK2pawsUw+fa9OOXQp3
+        Yl1TWJuTVxukFz2TlOq7h0tMZlfZvXZZOTcnryZUF6MB/yZfKVllaoLM/uCSgYU53fM8lsPemitdBhNh
+        1YWgNmrhAdXsYB9zmcni8E4ZnXFAPULPRBpwz9Er+lKzpyvPctnAAQMal1nSIhpINOfm1YTtLiWHy2gW
+        2SaajbDINprjMn0t0R9gwGCVPN9OXl3e44tk7KrXEt3FBVxmwnXGrgahbTQ/Wl3ebHayWVw2cKBq8z6W
+        DXJBNJAIv8mparNK3lVchkRfMyu3qk1kGyF8JpNvi9MznssGDmZX0aP0Mm2bSy8IBwOWnGzR7C4WNMue
+        xHYVZtL7DlWsYOnJVqEGRPWiUhywpRc+wmUDC5vTm5a8sDhQKEj4yjMB7cNV5VRKFY9J027hEhOuKU8Y
+        LUu1gmxidSgeIxcUB2jm5nLFwGNsbu5tdtm7AV84bWtt+PeDF7QtZRe1pX816NWKSm85Zo6bd2BYGnss
+        wa1UjqLqBVtooJ2/pTZMLxCi0rsOvrn54MHq8IyiXXoPfekrNtnbmrSguNwieT63LdlxFzfpArQjZof3
+        iyS3UgENtIluVmCWPMncxFhgM6PqMSPJXVyONgSk9qPM4mBfRW90RsPQuMMl7wu0BzSMWeTjS6BRJ67H
+        LKKl41LqsTFyc8NgaFysbbQXM3493FZ1vmsLgnt4Rk5Po+fisn7D8LiUwMsnrjikVnfTSuDZhOUHVZr2
+        n7is3zA0LpKUHDZv8p0XOopmLtmQ7bWxqf47ubzPMDyu3el5CU0b9gKRk2hWnFb1Bs+cVvQil/cZhsfF
+        eQFG3U1vhLDRHQrOHYDVUfSq1elxUXneBeJ6hKS8wh93gpFxdYyQ9j8Jo/11V4VOollYy1tuufhxLteB
+        c4eNOl2L5A1PWVuhunYc18CpaytbcY+SNQc23FyHEXG7gHZev7S9rsd227HtWCiRNjUu04F1SwMtGre0
+        VMXZIlazp/ofDc8SXWzfkBW+O7hMR3/iCmFxspFoF/L9TUJHYH5lkwYbs9ObxGU6aKf/Gi1Kd41hCTWU
+        1Kep2ODaVe3oT9zrwiIzN7rXrL2n9NNexBGus/acRNUIWl1M5ubt0JtC5dzKwlOdgosIG5qVs52aSkKf
+        4vYEOglOpoE1QfzBikPNIK5xz+zwTOJmHcAvJ1i7JfTFowct4oETLfo6tzg8T7er/0O8cXsFNHjWdGZH
+        kwfi+nq/QZmdnjcxuJrGkHDw0Tza2F55rOlFb3B5J8QT13BEZsRHX1s0+GhGZsQmFz3F5TcQaL1j3fcm
+        R5AD1Lqfic0Rw4EySlP6nlVScqhe11slTyvYfq3k0Nd8V9QioP1OXqgESrrJEzyDjdXp/VIXRaGvcYWg
+        sjiGkuuE3a0EJq2tDs7MO6Ol7mzUieuUtUeCeGaTlQY6h4/mMh3YG+igtF/fR2jPiH2JAn0fKcEvioW0
+        5m/nMh39idsJOGKSwQKbk4WmZ9eHl7KAttwXEnIJU7Vp2cfDVqrp1Im6U1O1W7kbfWdPlFk2dnHs5rE7
+        u11iG6MPSEbF7QCcJbiKA/N2XxI6EXHu7iYNGqvMXNxNB9BX0VKQ8IM1ftiml3CaHWwIf9wBQ+NiWvFF
+        4nEWIZziC/XlzG1oXCQP1iamVSToDT+h6bbREbXXiUgwPC6qBJKou7XZE7F2KQnbqNcai0Fa0nxP4Pdb
+        WlpZdlnZBeIa9yJdq+FxaXpyJ/9c3SYyjIeTqKpQAm6ldbsRST0yw9c6fUN1aNbm4xo4bf2RUDLdwzPY
+        UNxtxsVl2Sa7S6lHeRMZxcOp62s1GmB4YlaFmuW9pG2vCWs7Yoh7eDZhRbkK2ynr64S+4uHMvNM4m9Rj
+        RlpSd14UGvWW320/j7/dtNlbTwhfIJaw+WFLg675nrQin73l7PxGJH0LnQPa/8frD8mRNm/HKeGgu+O8
+        7Scxi0Kf8RJt8/D+0CYz/9RfqoKigfaGU0hLPipFvuMhCkifYZM9b2Mf2HioWTjI3nDjwWb91GeRlbe4
+        28EHHU8zJ6/xt4oGGA8nrfarZsm7mLsdfNCprTotP/7ciOV8yi9qZaq428EHLYkrS/deEA4uHi4mH5Qn
+        l7nbwQdVi/D4ZWWtKav9zf0hfMAXdzv4QEdrJLnbm/gfwGT6Fw+yHHGQ1iEAAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="btnCliente.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
